syntax = "proto3";

package meshtrade.trading.direct_order.v1;

import "meshtrade/iam/role/v1/role.proto";
import "meshtrade/option/v1/method_type.proto";
import "meshtrade/trading/direct_order/v1/direct_order.proto";

option go_package = "github.com/meshtrade/api/go/trading/direct_order/v1;directorderv1";

service DirectOrderService {
  rpc GetDirectOrder(GetDirectOrderRequest) returns (meshtrade.trading.direct_order.v1.DirectOrder) {
    option (meshtrade.option.v1.method_type) = METHOD_TYPE_READ;
    option (meshtrade.iam.role.v1.roles) = {
      roles: [
        ROLE_TRADING_ADMIN,
        ROLE_TRADING_VIEWER
      ]
    };
  }
}

message GetDirectOrderRequest {
  string number = 1;
}
